2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/08_ifPlusieursThenelse.deca
// Description:
//    tests de programme correct, if et plusiseurs else if puis else
//
// Resultats:
//    programme correct.
//
// Historique:
//    cree le 09/01/2024
{
    int a = 3, y=5 , z = 5,  t =4;
    int x;
    if(a==1)
    {
        x=y;
    } else if (a != 2)
    {
        x=t;
    }else if(a>3){
        x=1;
    }else{
        x=z;
    }
}